# libicuid

./: .gitignore  .travis.yml  CHANGELOG  CMakeLists.txt  Doxyfile  LICENSE  README  README.md
cmake/: ConfigureChecks.cmake
include/icuid/: icuid.h  icuid_err.h  icuid_limits.h  icuid_types.h  icuid_ver.h
src/: CMakeLists.txt  Doxyfile  amd.c  amd.h  common.c  error.c  features.c  features.h  icuid.c  intel.c  intel.h  internal.h  match.c  match.h
src/cc/: CMakeLists.txt  gcc.c  masm-x86_64.asm  visualc.c
src/compat/: CMakeLists.txt  strlcpy.c
src/include/icuid/: icuid.h  icuid_err.h  icuid_limits.h  icuid_types.h  icuid_ver.h
src/include/internal/: stdcompat.h
src/windows/: exports.def  libicuid.rc
tests/: CMakeLists.txt  icuid_test.c
tests/data/amd/zen+/: ryzen-3500u.test
tests/data/intel/geminilake/: J4125.test
tests/data/intel/haswell/: i54200M.test  i7-4650U.test  i7-4770R.test  i7-4790K.test  i74650U.test  i74790k.test
tests/data/intel/ivybridge/: i5-3570K.test  i53570k.test
tests/data/intel/sandybridge/: e3-1245.test  i5-2500K.test
tests/data/intel/wolfdale/: e7500.test
tool/: CMakeLists.txt  icuid_tool.c  icuidtool.rc  opt.c  opt.h
